--- a/PsyduckLifeAndroid/app/src/main/res/values/strings.xml
+++ b/PsyduckLifeAndroid/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PsyduckLifeAndroid</string>
+    <string name="DirectionsFlying">\n\nClick the top of the screen to go up and click the bottom of the screen to go down. Avoid the Gravelers!\n\n\n\nClick to Start
+    </string>
+    <string name="DirectionsRunning">\n\nClick to jump up. Avoid the Gravelers as long as you can!\n\n\n\nClich to Start</string>
 </resources>
